--- a/src/components/main/pages/pages.css
+++ b/src/components/main/pages/pages.css
@@ -1,10 +1,28 @@
 .title{
     color: rgb(253, 241, 80);
     text-align: center;
-    margin: 10%;
+    margin: 2%;
+    margin-bottom: 10%;
 }
 
 .card-img-top{
     height: 60%;
     width: 100%;
+}
+
+
+.contact{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.textarea{
+    height: 10em;
+    margin-bottom: 1em; 
+    border: 1px solid #ced4da;
+    border-radius: 0.375rem;
 }
