--- a/src/components/main/pages/pages.css
+++ b/src/components/main/pages/pages.css
@@ -8,6 +8,7 @@
 .card-img-top{
     height: 60%;
     width: 100%;
+    
 }
 
 
@@ -39,7 +40,7 @@ a:hover{
 
 
 .imgContainer{
-    height: 500px;
+    
     width: auto;
     display: flex;
     justify-content: center;
@@ -49,6 +50,7 @@ a:hover{
 .card-img{
     width: 100%;
     height:auto;
+    object-fit: cover;
 }
 
 
