--- a/src/components/main/pages/pages.css
+++ b/src/components/main/pages/pages.css
@@ -27,10 +27,10 @@ a{
     
 
 }
-
+/*
 a:hover{
-   /*#rgb(204, 216, 30)*/
-}
+   #rgb(204, 216, 30)
+}*/
 
 .card-img-products{
     height: 271px;
@@ -62,11 +62,11 @@ a:hover{
     
 }
 
-.cart-detail{
+
+.card-detail{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; 
+    flex-direction: row;
+    margin: 4em;
 }
 
 
@@ -77,5 +77,8 @@ a:hover{
     
 }
 
+.card-detail{
+    flex-direction: column;
+}
 
 }
