ajustes carrito responsive

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -42,20 +42,19 @@
 .total-purchase{
    display: flex;
    justify-content: center;
-   margin-right: 4em;
+   
 }
 
 .total-purchase-p{
     background-color:white;
     color:black;
     height: 2em;
-    width: 8em;
+    width: 100%;
     display: flex;
     border-radius: 0.375rem;
     align-items: center;
     justify-content: center;
-    padding-left: 1%;
-    margin-top: 2em;
+    margin: 2em;
 }
 
 
