--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -13,3 +13,18 @@
     }
    
 }
+
+@media (max-width: 350px) {
+    #login-buttons{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .login-button{
+        height: 30px;
+        margin-top: 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
