solucionado error links dropdown

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -17,13 +17,7 @@
     align-items: center;
 }
 
-/*
-.cartDetail{
-    display: flex;
-    flex-direction: column; 
-    align-items: left;
-    justify-content:center ;
-}*/
+
 
 .cart-detail{
     display: flex;
@@ -55,6 +49,24 @@
     align-items: center;
     justify-content: center;
     margin: 2em;
+}
+
+
+.empty-cart{
+    background-color: white;
+    font-size: 20px;
+    color: black;
+    border-radius: 0.375rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20%;
+    
+}
+
+.empty{
+    display: flex;
+    margin-top: 10px;
 }
 
 
