--- a/src/components/main/home/home.css
+++ b/src/components/main/home/home.css
@@ -1,1 +1,12 @@
+.home-container{
+    margin-top: 8em;
+    margin-bottom: 4em;
+}
 
+
+
+@media (max-width: 350px) {
+    .home-container{
+        margin-top:2em;
+    }
+}
