modificaciones de formulario

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -69,6 +69,19 @@
     margin-top: 10px;
 }
 
+.container {
+    max-width: 960px;
+  }
+
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+  
+
 
 @media (max-width: 750px) {
 
@@ -83,5 +96,6 @@
     .cart-detail{
         margin: auto;
     }
-   
+
+    
 }
