--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -4,6 +4,10 @@
     margin-top:8em;
 }
 
+.swal-button-container{
+    background-color: "F1C40F";
+}
+
 @media (max-width: 750px) {
 
     .login-container{
